# RL-Driven-AutoML

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: __init__.py  app.py  model_selector_environment.py  requirements.txt
server/steps_8/: data_cleaning.py  encoding.py  ensemble.py  feature_engineering.py  feature_selection.py  hyperparameter_tuning.py  model_selection.py  scaling.py
